test/Fail/Erased-record-2.agda
record @0 R : Set₂ where
  field
    x : Set₁

_ : R
_ = record { x = Set }
